[package]
name = "rustclean"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform" }
walkdir = "2.5"
sysinfo = "0.37.0"
dirs = "6.0.0"
fastrand = "2.1"
